<resources>
    <string name="app_name">TacklingNephrotic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="four_plus"> more than 1000 mg/dL ++++</string>
    <string name="about_app">An app to tackle daily tasks of manual logging of urine readings, medication tracking and many more stuffs..</string>
    <string name="app_name_header">Tackling Nephrotic</string>
    <string name="madeInIndia">Made in India</string>
    <string name="client_id">482693276004-qgsf7ettn3lfv4ds11mo9gp28el07tfv.apps.googleusercontent.com</string>
    <string name="use_another_login_method">Want to use other login method?</string>
    <string name="sign_in">Click Me</string>
    <string name="app_name_supporter">with ease..</string>
    <string name="get_started_button_text">Login or Sign Up with Google</string>
    <string name="no_internet_exclaim">No Internet Connectivity</string>
    <string name="unknown_error_with_error_code">Unknown Error with Error Code</string>

    <string name="welcome_back_header">Welcome back !</string>
    <string name="login_with_phone_number_btn_text">Login with Phone Number</string>
    <string name="line_1_privacy_policy">By continuing, you are agreeing to our</string>
    <string name="line_2_privacy_policy">User Agreement and Privacy Policy</string>
    <string name="login_with_google_btn_text">Login with Google</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="login_failed_msg2">Login Failed! Something went wrong</string>
    <string name="role_selector_header_text">Select Your Role</string>
    <string name="role_selection_usage_msg">To give you best experience of the app, we need a role for you</string>
    <string name="user_role_care_taker_msg">I am Care Taker</string>
    <string name="user_role_patient_msg">I am Patient</string>
    <string name="fatal_error">Fatal Error !!</string>
    <string name="invalid_user_exclaim">User is already Present</string>
    <string name="skip">Skip</string>
    <string name="select_any_one">Please select your role</string>
    <string name="error_name">Name Cannot be null</string>
    <string name="error_weight">Weight Cannot be null</string>
    <string name="error_weight_negative">Weight Cannot be Negative</string>
    <string name="change_profile_pic">change profile pic</string>
    <string name="pick_profile_pic_title">Select Picture</string>
    <string name="pick_image_camera">Open Camera</string>
    <string name="pick_image_gallery">Open Gallery</string>
    <string name="invalid_age">Age cannot be zero or less than zero</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_weight">Patient Weight</string>
    <string name="enter_patient_details">Enter Patient Information</string>
    <string name="continue_text">continue</string>
    <string name="age_year">years old</string>
    <string name="no_reading_picked">Please select reading first.</string>
    <string name="continue_with_long_click">Hold Patient Info. Card to Continue</string>
    <string name="not_available">Not Available</string>
    <string name="no_name">No Name</string>
    <string name="login_with_email">Login with e-mail</string>
</resources>