<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ruviapps.tacklingnephrotic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="userTest"
            app:argType="string"
            android:defaultValue='"Negative"' />
        <argument
            android:name="patientId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ruviapps.tacklingnephrotic.ui.patient_profile.PatientProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_patient_profile" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_result"
            app:destination="@id/nav_result"
            app:popUpTo="@id/nav_gallery"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ruviapps.tacklingnephrotic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_result"
        android:name="com.ruviapps.tacklingnephrotic.ui.test_result.ResultPickerFragment"
        android:label="Result"
        tools:layout="@layout/result_picker_fragment"
        >
        <action
            android:id="@+id/action_nav_result_to_nav_home"
            app:destination="@id/nav_home" >
        </action>
        <argument
            android:name="patientId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <deepLink
        android:id="@+id/deepLink"
        app:uri="0drd7hpogt" />
    <fragment
        tools:layout="@layout/fragment_patient_dialog"
        android:id="@+id/nav_patient_picker"
        android:name="com.ruviapps.tacklingnephrotic.ui.select_patient_dialog.PatientPickerDialogFragment"
        android:label="PatientDialog" >
        <action
            android:id="@+id/action_welcome_to_nav_result"
            app:destination="@id/nav_result" />
        <argument
            android:name="careTakerId"
            app:argType="string"
            android:defaultValue='""' />
    </fragment>
    <fragment
        android:id="@+id/nav_userRole"
        android:name="com.ruviapps.tacklingnephrotic.ui.userrole.UserRoleFragment"
        android:label="UserRoleFragment" >
        <action
            android:id="@+id/action_nav_userRole_to_nav_result"
            app:destination="@id/nav_result"
            app:popUpTo="@id/nav_userRole"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_userRole_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_userRole"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_loginFragment"
        android:name="com.ruviapps.tacklingnephrotic.ui.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_nav_loginFragment_to_nav_userRole"
            app:destination="@id/nav_userRole"
            app:popUpTo="@id/nav_loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_loginFragment_to_nav_result"
            app:destination="@id/nav_result"
            app:popUpTo="@id/nav_loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_loginFragment_to_nav_welcome2"
            app:destination="@id/nav_patient_picker"
            app:popUpTo="@id/nav_loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>